[package]
name = "mcp-chroma"
version = "1.0.2"
edition = "2024"
description = "MCP server for ChromaDB"
authors = ["viable"]

[dependencies]
mcp-server = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
anyhow = "1.0"
colored = "3.0"
async-trait = "0.1.88"
mcp-spec = "0.1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.3", features = ["derive", "env"] }
reqwest = { version = "0.12.15", features = ["json", "native-tls"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
opt-level = 3
panic = "abort"
lto = true
debug = false
strip = true

[dev-dependencies]
rand = "0.9"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
